--- a/lipur_information_app/app/src/main/res/values/strings.xml
+++ b/lipur_information_app/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">lipur_information_app</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="letsgo">1</string>
 
 </resources>
